# oxnas-tools

./: .gitignore  ChangeLog  Makefile.am  NEWS  README  configure.ac
doc/: 0001-oxnas-boot-tools--new-recipe.patch  Makefile.am  contribs-comefrom.txt  mkoxnasblob.1.in  patches-comefrom.txt  setupoxnasmbr.1.in
doc/boot-tools/ARM/: stage1.c
src/: Makefile.am  mkoxnasblob.sh.in  setupoxnasmbr.sh.in
